# ma_homework

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: webapp.py
app/api/: routers.py
app/api/models/: __init__.py  fields.py  usermodel.py
app/api/models/db/: base.py  user.py
app/db/: __init__.py  base.py  user.py
app/settings/: db.py
k8s/: deploymets.yaml  ingress.yaml  service.yaml
k8s/ma-homework/: Chart.yaml  values.yaml
k8s/ma-homework/templates/: NOTES.txt  _helpers.tpl  config.yaml  deployment.yaml  ingress.yaml
k8s/ma-homework/templates/tests/: test-connection.yaml
k8s_old/: Chart.yaml  values.yaml
k8s_old/ma-homework/: Chart.yaml  values.yaml
k8s_old/ma-homework/templates/: _helpers.tpl  config.yaml  deployment.yaml  service.yaml
k8s_old/templates/: deployment.yaml  service.yaml
k8s_stubs/: deploymets.yaml  service.yaml
migrations/: env.py
migrations/versions/: 2022-11-19_initial.py
result/: result.md
