[tool.poetry]
name = "homework for microservice architecture"
version = "0.2.0"
description = "Практика по курсу «Микросервисная архитектура»"
authors = ["Nick Balandin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^1.4.44"
pydantic = "^1.10.2"
phonenumbers = "^8.13.0"
fastapi = "^0.82.0"
fastapi-crudrouter = "^0.8.5"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
lines_after_imports=2
skip="venv,.venv,.git,alembic"
